--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prettier": "prettier --write src/**/*.{ts,js,css,html}"
+    "prettier": "prettier --write src/**/*.{ts,js,css,html}",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -26,9 +27,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
+    "@angular-eslint/builder": "15.1.0",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/schematics": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -41,8 +51,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier --staged && ng lint && npm test"
-      
+      "pre-commit": "npm run prettier --staged && ng lint && npm test",
+      "pre-push": "ng build --aot true"
     }
   }
 }
