fix: improve build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,6 @@ jobs:
       - name: npm ci and npm run build
         run: |
           npm ci
+          npm run clean
+          npm run test
           npm run build
