--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,5 +38,5 @@ jobs:
         run: |
           npm ci
           npm run clean
-          npm run test
-          npm run build
+          npm run test:ci
+          npm run build:ci
