fix: atom-highlight path in angluar.json is wrong

--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/atom-highlit.css"
+              "src/atom-highlight.css"
             ],
             "scripts": []
           }
