fix: use -c instead of --prod

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "clean": "rimraf ./dist",
     "build": "ng build",
-    "build:ci": "ng build --prod",
+    "build:ci": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:ci": "ng test --watch=false --browsers=FirefoxHeadless",
