--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "^2.8.2",
-    "typescript": "~4.8.2"
+    "typescript": "^4.9.3"
   },
   "husky": {
     "hooks": {
